@@ -211,6 +211,10 @@ Get the contents of the header \var{name}, or \var{default} if there is no
 matching header.
 \end{methoddesc}
 
+\begin{methoddesc}{getheaders}{}
+Return a list of (header, value) tuples. \versionadded{2.4}
+\end{methoddesc}
+
 \begin{datadesc}{msg}
   A \class{mimetools.Message} instance containing the response headers.
 \end{datadesc}
